SCRUM-56: Implement adding and leaving a group  on the frontend